[package]
name = "hello_world_web"
version = "0.1.0"
authors = ["xiaobin <xiaobinh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
derive_more = "0.99"
log = "0.4"
env_logger = "0.8"
rand = "0.8"
jwt = "0.13"
hmac = "0.10"
sha2 = "0.9"